--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,13 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation("com.google.api-client:google-api-client:1.25.0")
+    implementation("com.google.oauth-client:google-oauth-client-jetty:1.25.0")
+    implementation("com.google.apis:google-api-services-youtube:v3-rev212-1.25.0")
 }
