--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,7 @@ dependencies {
     implementation("com.google.api-client:google-api-client:1.25.0")
     implementation("com.google.oauth-client:google-oauth-client-jetty:1.25.0")
     implementation("com.google.apis:google-api-services-youtube:v3-rev212-1.25.0")
+    /** Add_Glide4 */
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
